--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -1,6 +1,6 @@
 #High-quality water
 #Should be 'on' or 'off'
-HQ_Water off
+HQ_Water on
 
 #Resolution of the high quality water
 HQ_Water_Reflection_Width 1600
