--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -154,6 +154,8 @@
     <ClCompile Include="src\entities\JumpRamp.cpp" />
     <ClCompile Include="src\entities\Light.cpp" />
     <ClCompile Include="src\entities\ManiaSonicModel.cpp" />
+    <ClCompile Include="src\entities\Rail.cpp" />
+    <ClCompile Include="src\entities\Ring.cpp" />
     <ClCompile Include="src\entities\SkySphere.cpp" />
     <ClCompile Include="src\entities\Stage.cpp" />
     <ClCompile Include="src\entities\StagePass2.cpp" />
@@ -213,6 +215,7 @@
     <ClCompile Include="src\shadows\ShadowMapMasterRenderer.cpp" />
     <ClCompile Include="src\shadows\ShadowShader.cpp" />
     <ClCompile Include="src\textures\ModelTexture.cpp" />
+    <ClCompile Include="src\toolbox\Getline.cpp" />
     <ClCompile Include="src\toolbox\Input.cpp" />
     <ClCompile Include="src\toolbox\Level.cpp" />
     <ClCompile Include="src\toolbox\LevelLoader.cpp" />
@@ -254,6 +257,8 @@
     <ClInclude Include="src\entities\jumpramp.h" />
     <ClInclude Include="src\entities\light.h" />
     <ClInclude Include="src\entities\maniasonicmodel.h" />
+    <ClInclude Include="src\entities\rail.h" />
+    <ClInclude Include="src\entities\ring.h" />
     <ClInclude Include="src\entities\skysphere.h" />
     <ClInclude Include="src\entities\stage.h" />
     <ClInclude Include="src\entities\stagepass2.h" />
@@ -308,6 +313,7 @@
     <ClInclude Include="src\shadows\shadowmapmasterrenderer.h" />
     <ClInclude Include="src\shadows\shadowshader.h" />
     <ClInclude Include="src\textures\modeltexture.h" />
+    <ClInclude Include="src\toolbox\getline.h" />
     <ClInclude Include="src\toolbox\input.h" />
     <ClInclude Include="src\toolbox\level.h" />
     <ClInclude Include="src\toolbox\levelloader.h" />
