wip metal harbor stuff

--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -1,6 +1,6 @@
 #High-quality water
 #Should be 'on' or 'off'
-HQ_Water on
+HQ_Water off
 
 #Resolution of the high quality water
 HQ_Water_Reflection_Width 1600
@@ -13,10 +13,10 @@ HQ_Water_Refraction_Height 900
 #HQ_Water_Refraction_Height 540
 
 #Render particles
-Render_Particles on
+Render_Particles off
 
 #Render bloom effect
-Render_Bloom on
+Render_Bloom off
 
 #Render shadows
 Render_Shadows_Far off
@@ -27,7 +27,7 @@ Render_Shadows_Close off
 Shadows_Far_Quality 2
 
 #Number of multisamples to use for anti-aliasing
-Anti-Aliasing_Samples 8
+Anti-Aliasing_Samples 0
 
 
 #Vertical Field of View
