Finish Implementing all the new Metal Harbor things.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "program": "${workspaceFolder}/NewSonicThing/a.out",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/NewSonicThing/",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
