--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -1,6 +1,6 @@
 #High-quality water
 #Should be 'on' or 'off'
-HQ_Water off
+HQ_Water on
 
 #Resolution of the high quality water
 HQ_Water_Reflection_Width 1600
@@ -13,10 +13,10 @@ HQ_Water_Refraction_Height 900
 #HQ_Water_Refraction_Height 540
 
 #Render particles
-Render_Particles off
+Render_Particles on
 
 #Render bloom effect
-Render_Bloom off
+Render_Bloom on
 
 #Render shadows
 Render_Shadows_Far off
