clipping plane optimization

--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -16,7 +16,7 @@ HQ_Water_Refraction_Height 900
 Render_Particles on
 
 #Render bloom effect
-Render_Bloom off
+Render_Bloom on
 
 #Render shadows
 Render_Shadows_Far off
@@ -27,7 +27,7 @@ Render_Shadows_Close off
 Shadows_Far_Quality 2
 
 #Number of multisamples to use for anti-aliasing
-Anti-Aliasing_Samples 4
+Anti-Aliasing_Samples 8
 
 
 #Vertical Field of View
