Separate different menu screens/mission menu rewrite.

--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="src\shadows\ShadowMapMasterRenderer.cpp" />
     <ClCompile Include="src\shadows\ShadowShader.cpp" />
     <ClCompile Include="src\textures\ModelTexture.cpp" />
+    <ClCompile Include="src\toolbox\Button.cpp" />
     <ClCompile Include="src\toolbox\Getline.cpp" />
     <ClCompile Include="src\toolbox\Input.cpp" />
     <ClCompile Include="src\toolbox\Level.cpp" />
@@ -228,6 +229,8 @@
     <ClCompile Include="src\toolbox\MainMenu.cpp" />
     <ClCompile Include="src\toolbox\maths.cpp" />
     <ClCompile Include="src\toolbox\matrix.cpp" />
+    <ClCompile Include="src\toolbox\MenuManager.cpp" />
+    <ClCompile Include="src\toolbox\MissionMenu.cpp" />
     <ClCompile Include="src\toolbox\PauseScreen.cpp" />
     <ClCompile Include="src\toolbox\Split.cpp" />
     <ClCompile Include="src\toolbox\vector.cpp" />
@@ -325,6 +328,7 @@
     <ClInclude Include="src\shadows\shadowmapmasterrenderer.h" />
     <ClInclude Include="src\shadows\shadowshader.h" />
     <ClInclude Include="src\textures\modeltexture.h" />
+    <ClInclude Include="src\toolbox\button.h" />
     <ClInclude Include="src\toolbox\getline.h" />
     <ClInclude Include="src\toolbox\input.h" />
     <ClInclude Include="src\toolbox\level.h" />
@@ -332,6 +336,9 @@
     <ClInclude Include="src\toolbox\mainmenu.h" />
     <ClInclude Include="src\toolbox\maths.h" />
     <ClInclude Include="src\toolbox\matrix.h" />
+    <ClInclude Include="src\toolbox\menu.h" />
+    <ClInclude Include="src\toolbox\menumanager.h" />
+    <ClInclude Include="src\toolbox\missionmenu.h" />
     <ClInclude Include="src\toolbox\pausescreen.h" />
     <ClInclude Include="src\toolbox\split.h" />
     <ClInclude Include="src\toolbox\vector.h" />
