--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -160,9 +160,12 @@
     <ClCompile Include="src\entities\MetalHarbor\MH_PathFlat.cpp" />
     <ClCompile Include="src\entities\MetalHarbor\MH_PathFlatSmall.cpp" />
     <ClCompile Include="src\entities\MetalHarbor\MH_RocketBase.cpp" />
+    <ClCompile Include="src\entities\MetalHarbor\MH_StageManager.cpp" />
     <ClCompile Include="src\entities\MetalHarbor\MH_Tank.cpp" />
+    <ClCompile Include="src\entities\Point.cpp" />
     <ClCompile Include="src\entities\Rail.cpp" />
     <ClCompile Include="src\entities\Ring.cpp" />
+    <ClCompile Include="src\entities\Rocket.cpp" />
     <ClCompile Include="src\entities\SkyRail\SR_StageManager.cpp" />
     <ClCompile Include="src\entities\SkySphere.cpp" />
     <ClCompile Include="src\entities\Stage.cpp" />
@@ -278,9 +281,12 @@
     <ClInclude Include="src\entities\MetalHarbor\mhpathflat.h" />
     <ClInclude Include="src\entities\MetalHarbor\mhpathflatsmall.h" />
     <ClInclude Include="src\entities\MetalHarbor\mhrocketbase.h" />
+    <ClInclude Include="src\entities\MetalHarbor\mhstagemanager.h" />
     <ClInclude Include="src\entities\MetalHarbor\mhtank.h" />
+    <ClInclude Include="src\entities\point.h" />
     <ClInclude Include="src\entities\rail.h" />
     <ClInclude Include="src\entities\ring.h" />
+    <ClInclude Include="src\entities\rocket.h" />
     <ClInclude Include="src\entities\SkyRail\srstagemanager.h" />
     <ClInclude Include="src\entities\skysphere.h" />
     <ClInclude Include="src\entities\stage.h" />
