new texture animation support for entities. more work on green hill.

--- a/NewSonicThing/NewSonicThing.vcxproj.filters
+++ b/NewSonicThing/NewSonicThing.vcxproj.filters
@@ -88,6 +88,9 @@
     <Filter Include="Source Files\entities\SkyRail">
       <UniqueIdentifier>{a3414b4d-e85a-470d-86d5-144acce47658}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\entities\GreenHill">
+      <UniqueIdentifier>{c2e0e7b4-63f1-4fb5-87dc-fef8eb7f38f1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glad.c">
@@ -447,6 +450,9 @@
     <ClCompile Include="src\entities\MetalHarbor\MH_StageManager.cpp">
       <Filter>Source Files\entities\MetalHarbor</Filter>
     </ClCompile>
+    <ClCompile Include="src\entities\GreenHill\GH_StageManager.cpp">
+      <Filter>Source Files\entities\GreenHill</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\animation\animation.h">
@@ -790,6 +796,9 @@
     </ClInclude>
     <ClInclude Include="src\entities\MetalHarbor\mhstagemanager.h">
       <Filter>Source Files\entities\MetalHarbor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\GreenHill\ghstagemanager.h">
+      <Filter>Source Files\entities\GreenHill</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
