--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="src\entities\Entity.cpp" />
     <ClCompile Include="src\entities\GoalRing.cpp" />
     <ClCompile Include="src\entities\GreenForest\GF_StageManager.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_StageManager.cpp" />
     <ClCompile Include="src\entities\JumpRamp.cpp" />
     <ClCompile Include="src\entities\Light.cpp" />
     <ClCompile Include="src\entities\ManiaSonicModel.cpp" />
@@ -273,6 +274,7 @@
     <ClInclude Include="src\entities\entity.h" />
     <ClInclude Include="src\entities\goalring.h" />
     <ClInclude Include="src\entities\GreenForest\gfstagemanager.h" />
+    <ClInclude Include="src\entities\GreenHill\ghstagemanager.h" />
     <ClInclude Include="src\entities\jumpramp.h" />
     <ClInclude Include="src\entities\light.h" />
     <ClInclude Include="src\entities\maniasonicmodel.h" />
