make it look pretty

--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -29,6 +29,8 @@ Shadows_Far_Quality 2
 #Number of multisamples to use for anti-aliasing
 Anti-Aliasing_Samples 8
 
-
 #Vertical Field of View
 FOV 70
+
+#Unlock_Framerate
+Unlock_Framerate off
