--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "buildSAB2",
             "type": "shell",
-            "command": "./buildSAB2.sh",
+            "command": "make",
             "group": {
                 "kind": "build",
                 "isDefault": true
