--- a/NewSonicThing/NewSonicThing.vcxproj.filters
+++ b/NewSonicThing/NewSonicThing.vcxproj.filters
@@ -97,6 +97,9 @@
     <Filter Include="Source Files\entities\DelfinoPlaza">
       <UniqueIdentifier>{d0aef4f7-da73-461e-b481-a2f3eb0bebda}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\entities\Tutorial">
+      <UniqueIdentifier>{4c5de964-236c-4857-8963-be35bc59474a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glad.c">
@@ -483,6 +486,12 @@
     <ClCompile Include="src\entities\RaceGhost.cpp">
       <Filter>Source Files\entities</Filter>
     </ClCompile>
+    <ClCompile Include="src\entities\Help.cpp">
+      <Filter>Source Files\entities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\entities\Tutorial\T_StageManager.cpp">
+      <Filter>Source Files\entities\Tutorial</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\animation\animation.h">
@@ -853,6 +862,12 @@
     </ClInclude>
     <ClInclude Include="src\entities\raceghost.h">
       <Filter>Source Files\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\help.h">
+      <Filter>Source Files\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\Tutorial\tstagemanager.h">
+      <Filter>Source Files\entities\Tutorial</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
