--- a/NewSonicThing/NewSonicThing.vcxproj.filters
+++ b/NewSonicThing/NewSonicThing.vcxproj.filters
@@ -495,6 +495,9 @@
     <ClCompile Include="src\menu\ConfigMenu.cpp">
       <Filter>Source Files\menu</Filter>
     </ClCompile>
+    <ClCompile Include="src\entities\ItemCapsule.cpp">
+      <Filter>Source Files\entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\animation\animation.h">
@@ -874,6 +877,9 @@
     </ClInclude>
     <ClInclude Include="src\menu\configmenu.h">
       <Filter>Source Files\menu</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\itemcapsule.h">
+      <Filter>Source Files\entities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
