audio, ui changes, 3spring, tutorial layout

--- a/NewSonicThing/NewSonicThing.vcxproj.filters
+++ b/NewSonicThing/NewSonicThing.vcxproj.filters
@@ -498,6 +498,9 @@
     <ClCompile Include="src\entities\ItemCapsule.cpp">
       <Filter>Source Files\entities</Filter>
     </ClCompile>
+    <ClCompile Include="src\entities\SpringTriple.cpp">
+      <Filter>Source Files\entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\animation\animation.h">
@@ -879,6 +882,9 @@
       <Filter>Source Files\menu</Filter>
     </ClInclude>
     <ClInclude Include="src\entities\itemcapsule.h">
+      <Filter>Source Files\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\springtriple.h">
       <Filter>Source Files\entities</Filter>
     </ClInclude>
   </ItemGroup>
