UI improvements, arcade mode, more level objects and other level additions

--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -173,7 +173,6 @@
     <ClCompile Include="src\entities\GoalRing.cpp" />
     <ClCompile Include="src\entities\GreenForest\GF_StageManager.cpp" />
     <ClCompile Include="src\entities\GreenHill\GH_StageManager.cpp" />
-    <ClCompile Include="src\entities\JumpRamp.cpp" />
     <ClCompile Include="src\entities\Light.cpp" />
     <ClCompile Include="src\entities\ManiaSonicModel.cpp" />
     <ClCompile Include="src\entities\MetalHarbor\MH_GiantRocket.cpp" />
@@ -191,6 +190,7 @@
     <ClCompile Include="src\entities\Rocket.cpp" />
     <ClCompile Include="src\entities\SkyRail\SR_StageManager.cpp" />
     <ClCompile Include="src\entities\SkySphere.cpp" />
+    <ClCompile Include="src\entities\SpeedRamp.cpp" />
     <ClCompile Include="src\entities\Spring.cpp" />
     <ClCompile Include="src\entities\SpringTriple.cpp" />
     <ClCompile Include="src\entities\Stage.cpp" />
@@ -229,6 +229,7 @@
     <ClCompile Include="src\menu\MenuManager.cpp" />
     <ClCompile Include="src\menu\MissionMenu.cpp" />
     <ClCompile Include="src\menu\PauseScreen.cpp" />
+    <ClCompile Include="src\menu\ResultsScreen.cpp" />
     <ClCompile Include="src\menu\Timer.cpp" />
     <ClCompile Include="src\models\RawModel.cpp" />
     <ClCompile Include="src\models\TexturedModel.cpp" />
@@ -309,7 +310,6 @@
     <ClInclude Include="src\entities\goalring.h" />
     <ClInclude Include="src\entities\GreenForest\gfstagemanager.h" />
     <ClInclude Include="src\entities\GreenHill\ghstagemanager.h" />
-    <ClInclude Include="src\entities\jumpramp.h" />
     <ClInclude Include="src\entities\light.h" />
     <ClInclude Include="src\entities\maniasonicmodel.h" />
     <ClInclude Include="src\entities\MetalHarbor\mhgiantrocket.h" />
@@ -327,6 +327,7 @@
     <ClInclude Include="src\entities\rocket.h" />
     <ClInclude Include="src\entities\SkyRail\srstagemanager.h" />
     <ClInclude Include="src\entities\skysphere.h" />
+    <ClInclude Include="src\entities\speedramp.h" />
     <ClInclude Include="src\entities\spring.h" />
     <ClInclude Include="src\entities\springtriple.h" />
     <ClInclude Include="src\entities\stage.h" />
@@ -364,6 +365,7 @@
     <ClInclude Include="src\menu\menumanager.h" />
     <ClInclude Include="src\menu\missionmenu.h" />
     <ClInclude Include="src\menu\pausescreen.h" />
+    <ClInclude Include="src\menu\resultsscreen.h" />
     <ClInclude Include="src\menu\timer.h" />
     <ClInclude Include="src\models\models.h" />
     <ClInclude Include="src\objLoader\fakeTexture.h" />
