--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ x64
 NewSonicThing/NewSonicThing.exe
 NewSonicThing/RaceLog.txt
 NewSonicThing/NewSonicThing.pdb
+NewSonicThing/src/SourceCodeCleaner.exe
